# madstore

./: .gitignore  Makefile.am  README.md  buildconf.sh  configure.ac
examples/: README.md  generate.py  input.json  query-expr.json  query.json  store.json
src/include/: Makefile.am  base.h  dims.h  input_spec.cc  input_spec.h  iterables_map.h  metrics.h  query.h  records.h  serializers.h  store.h  store_facade.cc  store_facade.h  store_factory.cc  store_factory.h  store_spec.cc  store_spec.h  types.h  watermarks.h
src/lib/: Makefile.am  base.h  dims.h  gen_sources.py  input_spec.cc  input_spec.h  iterables_map.h  jit.cc  jit.h  lisp.cc  lisp.h  lua.cc  lua.h  madstore.h  materializer.h  metrics.h  print.h  query.h  records.h  serializers.h  specs.cc  specs.h  store.cc  store.h  store_facade.cc  store_facade.h  store_factory.cc  store_factory.cc.j2  store_factory.h  store_spec.cc  store_spec.h  table.h  table_factory.cc  table_factory.cc.j2  table_factory.h  types.h  watermarks.h
src/madstored/: Makefile.am  logger.cc  logger.h  madstored.cc  madstored.cpp  rest_api.cc  rest_api.h  server_http.hpp
